kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-app-deployment2
  labels:
    app: node-app-viettq2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-app-viettq2
  template:
    metadata:
      labels:
        app: node-app-viettq2
    spec:
      containers:
        - name: node-app2
          image: harbor.prod.viettq.com/demo/my-app:v5
          imagePullPolicy: Always
          resources:
            # Specifying the resourses that we might need for our application
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 8080
