kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-app-service2
spec:
  selector:
    app: node-app-viettq2
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 8080
      nodePort: 31124
